update server optimization and relocate resource location